# skin

./: .gitignore  MANIFEST.in  README.md  setup.py
skin/: __init__.py  _compat.py  _santoral.py  cli.py  completion.py  core.py  kernel.py  rendering.py  templates.py  tools.py  utils.py
skin/templates/base_template/: skin_rules  skin_rules.py
skin/templates/base_template/$template_name/: skin_rules.py
skin/templates/base_template/{{template_name}}/: skin_rules
skin/templates/cmake_basic_cpp/: CMakeLists.txt.tmpl  README.md.tmpl  skin_rules.py
skin/templates/cmake_basic_cpp/doc/: CMakeLists.txt  Doxyfile.in.tmpl
skin/templates/cmake_basic_cpp/src/: CMakeLists.txt.tmpl  main.cpp.tmpl
skin/templates/cpp-class/: skin_rules  {{file_name}}.h.tmpl
skin/templates/cpp_class/: ${file_name}.cpp.tmpl  ${file_name}.h.tmpl  skin_rules.py
skin/templates/flask-alchemy-login/: skin_rules
skin/templates/flask-alchemy-login/{{project_name}}/: clean_and_make_db.py  config.py.tmpl  run.py
skin/templates/flask-alchemy-login/{{project_name}}/app/: __init__.py.tmpl  default_config.py
skin/templates/flask-alchemy-login/{{project_name}}/app/core/: login.py  models.py
skin/templates/python_module/: ${name}.py  ${name}.py.tmpl  skin_rules.py
skin/templates/setuptools_package/: setup.py.tmpl  skin_rules  skin_rules.py
skin/templates/setuptools_package/$package/: MANIFEST.in  __init__.py.tmpl  setup.py.tmpl
skin/templates/setuptools_package/{{package}}/: __init__.py.tmpl
skin/templates/testplate/: {{file_name}}.cpp.tmpl  {{file_name}}.h.tmpl
(+3 files in other folders)
